# tree-sitter-fen

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-fen.pc.in
bindings/c/tree_sitter/: tree-sitter-fen.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fen/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFenTests/: TreeSitterFenTests.swift
examples/: Login.fen
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: all-syntax.txt
