[package]
name = "tree-sitter-fen"
description = "A simple SDL for generating typesafe and cross-language code."
version = "0.1.0"
authors = ["Miciah Henderson <miciahjohnhenderson@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "fen"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/kiahjh/fen"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
